--- a/package.json
+++ b/package.json
@@ -115,5 +115,5 @@
   "bugs": {
     "url": "https://github.com/songc0001/github-pages-demo/issues"
   },
-  "homepage": "https://github.com/songc0001/github-pages-demo"
+  "homepage": "https://songc0001.github.io/github-pages-demo"
 }
